gcc-14.2.0/gcc/testsuite/gdc.test/compilable/imports/pkg20008/submod.d
version https://git-lfs.github.com/spec/v1
oid sha256:e0d772f8f67377ffd09a22c7ab8c6113c93f18c0e96075189790b1d4fd0a653a
size 38
